# Prediction_prix_maison_cycle-complet_ml

./: README.md  main.py  pyproject.toml  variables_significations.txt
data/: raw_data.dvc
data/raw_data/: immo_dataset_messy.csv
notebook/: 01_eda.ipynb  02_hypothese_test_.ipynb
